# BrickWorlds

./: .gitignore  CMakeLists.txt  Entwicklungsplan.md  README.md  setup_modules.sh
.github/workflows/: build.yml
client/: CMakeList.txt  CMakeListLists.txt  CMakeLists.txt
client/src/: Camera.cpp  Camera.h  ChunkMesh.cpp  ChunkMesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  main.cpp
content/blocks/: dirt.json  stone.json
master/: CMakeLists.txt
master/src/: main.cpp
server/: CMakeLists.txt
server/src/: main.cpp
shared/: CMakeLists.txt
shared/include/BrickWorlds/: Version.h
shared/include/BrickWorlds/Core/: Chunk.h  Types.h  World.h
shared/include/BrickWorlds/Voxel/: BlockId.h  Chunk.h  ChunkKey.h  ChunkManager.h  FlatGenerator.h  Jobs.h  World.h
shared/src/: Dummy.cpp
shared/src/Voxel/: Chunk.cpp  ChunkManager.cpp  Jobs.cpp  World.cpp
